--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
   <title>me</title>
+  <!-- I don't have a facebbok acount, and i wanted to reach you. In -->
+  <!-- https://hebrews110.github.io/epic/newtest/newtest.html?test=../earlyAmerican/eahQuiz7.js -->
+  <!-- it says, "to rewrite the Articles of Confederation" as an answer to the question, "Why was the Philadelphia Convention called?" -->
+  <!-- I may be mistaken, but i think it should say "to amend the Articles of Confederation" as the purpose was to amend not rewrite (i think). -->
 </head>
 <body>
 <h1>Title</h1>
